--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,11 +8,12 @@ trigger:
 
 pool:
   vmImage: 'windows-latest' # set to windows-latest or another Windows vmImage for Windows builds
-
+container: mcr.microsoft.com/windows/servercore:ltsc2019
 variables:
   imageName: 'pipelines-javascript-docker'
 
 steps:
+- script: set
 - task: Docker@2
   displayName: Build an image
   inputs:
