--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,14 +20,15 @@ steps:
     repository: $(imageName)
     command: build
     Dockerfile: app/Dockerfile
+
     
-- task: Docker@2
-  displayName: Push image
-  inputs:
-    containerRegistry: |
-      $(dockerHub)
-    repository: $(imageName)
-    command: push
-    tags: |
-      test1
-      test2
+#- task: Docker@2
+#  displayName: Push image
+#  inputs:
+#    containerRegistry: |
+#      $(dockerHub)
+#    repository: $(imageName)
+#    command: push
+#    tags: |
+#      test1
+#      test2
